<resources>
    <string name="app_name">Календарь задач</string>
    <string name="header_tasks">Мои задачи</string>
    <string name="status_done">Выполнена</string>
    <string name="status_not_done">Не выполнена</string>
    <string name="add_task">Добавить задачу</string>
    <string name="empty_tasks">Задач пока нет.\nНажмите «+», чтобы добавить.</string>

    <string name="title_add_task">Новая задача</string>
    <string name="hint_title">Название</string>
    <string name="hint_description">Описание</string>
    <string name="hint_date">Дата (ДД.ММ.ГГГГ)</string>
    <string name="save">Сохранить</string>
    <string name="task_saved">Задача сохранена</string>
    <string name="error_empty_title">Введите название</string>
    <string name="error_bad_date">Формат даты: ДД.ММ.ГГГГ</string>

    <string name="title_task_detail">Детали задачи</string>
    <string name="label_date">Дата: %1$s</string>
    <string name="mark_done">Отметить выполненной</string>
    <string name="mark_not_done">Вернуть в работу</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_title">Удалить задачу?</string>
    <string name="delete_message">«%1$s» будет удалена.</string>
    <string name="task_deleted">Задача удалена</string>
    <string name="back">Назад</string>
</resources>